--- a/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="KXk-jL-aak">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2fS-oi-cWY">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -72,7 +72,7 @@
                     <navigationItem key="navigationItem" id="lC6-sg-O5W">
                         <nil key="title"/>
                         <view key="titleView" contentMode="scaleToFill" id="w4m-C8-G5S">
-                            <rect key="frame" x="180" y="5.5" width="240" height="33"/>
+                            <rect key="frame" x="180" y="6" width="240" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="WWDC" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZFP-mS-GRC">
@@ -364,7 +364,7 @@ Two times at WWDC!</string>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ICt-l1-GGj">
                                     <size key="itemSize" width="100" height="100"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="50" height="300"/>
                                     <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
@@ -411,6 +411,24 @@ Two times at WWDC!</string>
                                         </constraints>
                                     </collectionViewCell>
                                 </cells>
+                                <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageFooter" id="sDU-rv-tc5" customClass="MainScreenFooter" customModule="WWDC_Scholars_2015" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="184" width="600" height="300"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WallpaperWWDC.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="bEt-E8-fdz">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="300"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="bEt-E8-fdz" firstAttribute="top" secondItem="sDU-rv-tc5" secondAttribute="top" id="6pG-u3-ArD"/>
+                                        <constraint firstItem="bEt-E8-fdz" firstAttribute="leading" secondItem="sDU-rv-tc5" secondAttribute="leading" id="Ms3-TK-bzF"/>
+                                        <constraint firstAttribute="trailing" secondItem="bEt-E8-fdz" secondAttribute="trailing" id="NG8-aO-lGt"/>
+                                        <constraint firstAttribute="bottom" secondItem="bEt-E8-fdz" secondAttribute="bottom" id="PH1-EA-Ahg"/>
+                                    </constraints>
+                                    <connections>
+                                        <outlet property="backgroundImage" destination="bEt-E8-fdz" id="8V2-yZ-ewW"/>
+                                    </connections>
+                                </collectionReusableView>
                                 <connections>
                                     <outlet property="dataSource" destination="tYb-zB-5ZJ" id="cLn-L8-kfP"/>
                                     <outlet property="delegate" destination="tYb-zB-5ZJ" id="Mb2-CF-hjY"/>
@@ -476,6 +494,7 @@ Two times at WWDC!</string>
     </scenes>
     <resources>
         <image name="11358626_821050244645510_1909173720_n.jpg" width="632" height="673"/>
+        <image name="WallpaperWWDC.jpg" width="5535" height="3690"/>
         <image name="facebook_test_icn.png" width="60" height="60"/>
         <image name="github_test_icn.png" width="60" height="60"/>
         <image name="mail_test_icn.png" width="60" height="60"/>
